fixing overflow issues

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -134,6 +134,9 @@ a {
 
 .neumorphism-card-big {
   box-shadow: 5px 5px 4px #161718, -5px -5px 4px #404346;
+}
+
+.post-layout {
   word-break: break-word
 }
 
